@@ -32,6 +32,11 @@ base dc=example,dc=org
 # The search scope; sub, one, or base.
 scope one
 
+# Specifies if the client should automatically follow referrals returned
+# by LDAP servers. This must be typically disabled for Active Directory.
+# Default is "on".
+referrals off
+
 # Search timelimit in seconds (0 for indefinite).
 timelimit 5
 
