@@ -8,6 +8,7 @@
 == link:{tags}/v1.3.0[1.3.0] (unreleased)
 
 * Add support for SASL GSSAPI (Kerberos) authentication. (PR {pulls}/27[#27])
+* Allow to disable LDAP referrals using option `referrals`.
 
 
 == link:{tags}/v1.2.0[1.2.0] (2017-02-24)
